components/Cards/SchoolCard/SchoolCard.css
.SchoolCard {
  width: 330px;
  font-family: var(--primaryFontFamily), sans-serif;
  border: 1px solid var(--primary);
  justify-content: normal;
  padding: 0;
  position: relative;
  overflow: hidden;

  /* Hardcoded white background to match logo image background, which var(--white) does not match */
  background-color: #ffffff;
}

@media screen and (--large-viewport) {
  .SchoolCard {
    width: 300px;
  }
}

@media screen and (--small-viewport) {
  .SchoolCard {
    width: 100%;
  }
}

.SchoolCard,
.badgeGroup .active {
  color: rgba(0, 0, 0, 0.7);
}

.ribbon {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0.3rem 0 0.1rem; /* Add more padding on top to fix vertically center */
  background: var(--secondary);
  color: var(--primary);
  position: absolute;
  top: 0;
  right: 0;
  text-transform: uppercase;
  text-align: center;
  transform: translateX(20%) translateY(0%) rotate(40deg);
  transform-origin: top left;
}

.ribbon::before {
  right: 100%;
}

.ribbon::after {
  left: 100%;
}

.gi {
  width: 85px;
  background: var(--secondary);
  color: var(--primary);
}

.gi::before,
.gi::after,
.dual::before,
.dual::after {
  content: "";
  position: absolute;
  top: 0;
  margin: 0 -1px;
  width: 100%;
  height: 100%;
  background: var(--secondary);
}

.vettec {
  width: 85px;
  background: var(--primary);
  color: var(--secondary);
  padding: 0.4rem 0 0.1rem;
}

.vettec::before,
.vettec::after {
  content: "";
  position: absolute;
  top: 0;
  margin: 0 -1px;
  width: 100%;
  height: 100%;
  background: var(--primary);
}

.dual {
  width: 40px;
  background: var(--secondary);
  color: var(--primary);
}

.cardBrand {
  text-align: center;
  padding: 0.25rem 0;
}

.SchoolCard,
.cardBlock {
  box-sizing: border-box;
}

.cardBlock {
  display: flex;
  width: 100%;
  padding: 1rem 0.75rem;
  border-top: 1px solid var(--gray);
}

.cardBlockTitle {
  font-weight: bold;
  display: block;
  margin-right: auto;
  padding-right: 6px;
  color: var(--secondary);
}

.SchoolCard .modalToggler {
  min-width: auto;
  text-transform: none;
  padding: 2px 6px 0;
  margin: -4px 0 0 7px;
  letter-spacing: 0;
  color: inherit;
  background-color: var(--gray);
  border: 2px solid var(--gray);
}

.SchoolCard .modalToggler:hover {
  background-color: transparent;
  color: var(--secondary);
  border-color: var(--gray);
}

@media screen and (--large-viewport) {
  .SchoolCard .modalToggler {
    margin-top: -5px;
  }
}

.badgeGroup {
  display: flex;
  color: var(--gray);
}

.badgeGroupItem {
  margin: 0 8px;
  font-size: 15px;
}

@media screen and (--large-viewport) {
  .badgeGroupItem {
    margin: 0 6px;
  }
}

.badgeGroupItem:last-child {
  margin-right: 0;
}

.badgeGroupItem svg {
  height: 32px;
  margin: 0;
}

@media screen and (--large-viewport) {
  .badgeGroupItem svg {
    height: 28px;
  }
}

@media screen and (--medium-viewport) {
  .badgeGroupItem svg {
    height: 26px;
  }
}

@media screen and (--small-viewport) {
  .badgeGroupItem svg {
    height: 22px;
  }
}

.badgeGroupItem figcaption {
  margin-top: 10px;
}

@media screen and (--small-viewport) {
  .badgeGroupItem figcaption {
    font-size: 0.875em;
  }
}

